argocd/waiter/snucse/resources.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: snucse
  name: snucse
spec:
  parentRefs:
    - namespace: cilium-system
      name: web-gateway
      sectionName: https-snucse-org
  hostnames:
    - www.snucse.org
  rules:
    # default route to frontend
    - backendRefs:
        - name: snucse-front
          port: 80
    # backend routes
    - backendRefs:
        - name: snucse-back
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type:
            value: /files
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: cilium-system
  name: redirect-to-www
  annotations:
    # Otherwise, external-dns struggles with creating the CNAME at the apex
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: web-gateway
      sectionName: apex-snucse-org
  hostnames:
    - snucse.org
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: www.snucse.org
            port: 443
            statusCode: 301
